feat: início da integração com Room, Retrofit e unificação de casos de uso
- Adicionado plugin `kotlin-kapt` e dependências do Room, Retrofit, OkHttp e Gson no projeto
- Criadas configurações iniciais para Retrofit com `RetrofitProvider`, `AuthInterceptor` e `TokenAuthenticator`
- Ajustados pacotes para padronização no namespace `br.com.fbsantos.baseapp`
- Adicionados parâmetros globais em `AppConfig` para debug e timeout
- Estruturadas entidades e DAOs do Room para futuras operações de persistência
- Iniciado processo de unificação de casos de uso relacionados a tokens e histórico de atividades
- Código ainda não funcional; pendente implementação final de repositórios, API services e configuração completa do banco

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,11 @@ accompanistNavigationAnimation = "0.36.0"
 recaptcha = "18.7.0-beta01"
 firebaseUiAuth = "9.0.0"
 markdownRenderer = "0.33.0"
+retrofit = "3.0.0"
+gson = "2.13.1"
+okhttp = "5.1.0"
+roomCommonJvm = "2.7.2"
+roomRuntimeAndroid = "2.7.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,10 +49,18 @@ recaptcha = { module = "com.google.android.recaptcha:recaptcha", version.ref = "
 firebase-ui-auth = { module = "com.firebaseui:firebase-ui-auth", version.ref = "firebaseUiAuth" }
 markdown-renderer = { module = "com.mikepenz:multiplatform-markdown-renderer-android", version.ref = "markdownRenderer" }
 markdown-renderer-m3 = { module = "com.mikepenz:multiplatform-markdown-renderer-m3", version.ref = "markdownRenderer" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+androidx-room-common-jvm = { group = "androidx.room", name = "room-common-jvm", version.ref = "roomCommonJvm" }
+androidx-room-runtime-android = { group = "androidx.room", name = "room-runtime-android", version.ref = "roomRuntimeAndroid" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomRuntimeAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version = "4.4.3" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt" }
 
