feat: adicionar histórico de atividades com persistência no Room
- Criada entidade `HistoricoAtividadeEntity`, DAO e repositório para salvar e recuperar atividades recentes
- Implementados use cases para buscar, salvar e limpar histórico de atividades
- Integrado fluxo de histórico ao `AppViewModel` com métodos `addAtividade`, `loadHistoricoAtividade` e `setHistoricoAtividade`
- Ajustada `HomeScreen` para registrar atividade de acesso à Home e `HomeContent` para exibir lista de atividades recentes
- Adicionado componente `ActivityItem` para exibição de cada atividade
- Refatorados pacotes de repositórios, use cases e helpers para novo namespace `br.com.fbsantos.baseapp`
- Atualizado `AppDatabase` para incluir nova tabela de histórico, versão 2 e exportação de schema
- Incluído plugin `androidx.room` no Gradle e configuração de `schemaDirectory` para geração de schemas
- **Para esta versão, é necessário adicionar `.fallbackToDestructiveMigration(true)` no `single` do `Room.databaseBuilder` no arquivo `di/databaseModule`** para evitar conflitos de integridade durante migração destrutiva

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ okhttp = "5.1.0"
 roomCommonJvm = "2.7.2"
 roomRuntimeAndroid = "2.7.2"
 coilCompose = "2.7.0"
+room = "2.7.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -65,4 +66,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version = "4.4.3" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt" }
+androidx-room = { id = "androidx.room", version.ref = "room" }
 
