chore: atualizar versões de dependências
- coreKtx: 1.16.0 → 1.17.0
- composeBom: 2024.11.00 → 2025.08.00
- koin: 4.0.3 → 4.1.0
- recaptcha: 18.7.0-beta01 → 18.7.1
- markdownRenderer: 0.33.0 → 0.36.0-b02
- firebaseBom: 34.0.0 → 34.1.0

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.11.1"
 kotlin = "2.2.0"
-coreKtx = "1.16.0"
+coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
@@ -9,12 +9,12 @@ appcompat = "1.7.1"
 material = "1.12.0"
 lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
-composeBom = "2024.11.00"
-koin = "4.0.3"
+composeBom = "2025.08.00"
+koin = "4.1.0"
 accompanistNavigationAnimation = "0.36.0"
-recaptcha = "18.7.0-beta01"
+recaptcha = "18.7.1"
 firebaseUiAuth = "9.0.0"
-markdownRenderer = "0.33.0"
+markdownRenderer = "0.36.0-b02"
 retrofit = "3.0.0"
 gson = "2.13.1"
 okhttp = "5.1.0"
@@ -23,7 +23,7 @@ roomRuntimeAndroid = "2.7.2"
 coilCompose = "2.7.0"
 room = "2.7.2"
 biometric = "1.1.0"
-firebaseBom = "34.0.0"
+firebaseBom = "34.1.0"
 kotlinReflect = "2.2.0"
 
 [libraries]
