--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,30 +1,30 @@
 [versions]
-agp = "8.11.1"
-kotlin = "2.2.0"
+agp = "8.11.2"
+kotlin = "2.2.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 appcompat = "1.7.1"
-material = "1.12.0"
-lifecycleRuntimeKtx = "2.9.2"
-activityCompose = "1.10.1"
-composeBom = "2025.08.00"
-koin = "4.1.0"
+material = "1.13.0"
+lifecycleRuntimeKtx = "2.9.4"
+activityCompose = "1.11.0"
+composeBom = "2025.10.01"
+koin = "4.1.1"
 accompanistNavigationAnimation = "0.36.0"
-recaptcha = "18.7.1"
-firebaseUiAuth = "9.0.0"
-markdownRenderer = "0.36.0-b02"
+recaptcha = "18.8.0"
+firebaseUiAuth = "9.1.1"
+markdownRenderer = "0.37.0"
 retrofit = "3.0.0"
-gson = "2.13.1"
-okhttp = "5.1.0"
-roomCommonJvm = "2.7.2"
-roomRuntimeAndroid = "2.7.2"
+gson = "2.13.2"
+okhttp = "5.3.0"
+roomCommonJvm = "2.8.3"
+roomRuntimeAndroid = "2.8.3"
 coilCompose = "2.7.0"
-room = "2.7.2"
+room = "2.8.3"
 biometric = "1.1.0"
-firebaseBom = "34.1.0"
-kotlinReflect = "2.2.0"
+firebaseBom = "34.5.0"
+kotlinReflect = "2.2.20"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -71,7 +71,7 @@ kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", vers
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-google-services = { id = "com.google.gms.google-services", version = "4.4.3" }
+google-services = { id = "com.google.gms.google-services", version = "4.4.4" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt" }
 androidx-room = { id = "androidx.room", version.ref = "room" }
 
